// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Health Page render when feature toggle is disabled 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="ant-row Grid__GridRow-sc-5irhjd-2"
      style="margin: -10px -10px -10px -10px;"
    >
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 hbWzKh"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Successful Connections
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /--
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 cKkaPt"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Failed Connections
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /--
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 gIZTOv"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Connection Success Ratio
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 cCEWWJ"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 eAQsEJ"
              >
                <div
                  class="ant-statistic-title"
                >
                  Average Time To Connect
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 brALVm"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Health Page should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="ant-row Grid__GridRow-sc-5irhjd-2"
      style="margin: -10px -10px -10px -10px;"
    >
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 hbWzKh"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Successful Connections
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    50.8K
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /107K
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 cKkaPt"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Failed Connections
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    56.5K
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /107K
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 gIZTOv"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Connection Success Ratio
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    47.34%
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 cCEWWJ"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 eAQsEJ"
              >
                <div
                  class="ant-statistic-title"
                >
                  Average Time To Connect
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    39.5 s
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 brALVm"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Health Page should show - when no data 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="ant-row Grid__GridRow-sc-5irhjd-2"
      style="margin: -10px -10px -10px -10px;"
    >
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 hbWzKh"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Successful Connections
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /--
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 cKkaPt"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Failed Connections
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /--
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 gIZTOv"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 dWcikt"
              >
                <div
                  class="ant-statistic-title"
                >
                  Connection Success Ratio
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 hDtfoa"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 Grid__ColInner-sc-5irhjd-0 XtIJT"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="Grid__Container-sc-5irhjd-1 dRhDDA"
        >
          <div
            class="styledComponents__Wrapper-sc-1jdne8l-0 cCEWWJ"
          >
            <div
              class="styledComponents__ContentWrapper-sc-1jdne8l-2 dNRGZs"
            >
              <div
                class="ant-statistic styledComponents__Statistic-sc-1jdne8l-4 eAQsEJ"
              >
                <div
                  class="ant-statistic-title"
                >
                  Average Time To Connect
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                </div>
              </div>
            </div>
            <div
              class="styledComponents__Link-sc-1jdne8l-3 brALVm"
            >
              (More details)
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
